--- a/mi-proyecto-cypress/Jenkinsfile
+++ b/mi-proyecto-cypress/Jenkinsfile
@@ -43,6 +43,35 @@ pipeline {
       }
     }
 
+    stage('Preparar historial Allure') {
+      steps {
+        dir('mi-proyecto-cypress') {
+          powershell '''
+            Write-Host "=== Copiando historial de Allure (si existe) ==="
+
+            if (Test-Path "allure-report/history") {
+              Write-Host "Historial encontrado. Copiando..."
+              Copy-Item -Recurse -Force "allure-report/history" "allure-results/history"
+            } else {
+              Write-Host "No existe historial previo."
+            }
+          '''
+        }
+      }
+    }
+
+    stage('Generar reporte Allure') {
+      steps {
+        dir('mi-proyecto-cypress') {
+          powershell '''
+            Write-Host "=== Generando reporte Allure ==="
+            allure generate allure-results --clean -o allure-report
+            Write-Host "=== Reporte Allure generado ==="
+          '''
+        }
+      }
+    }
+
     stage('Diagnóstico de artefactos') {
       steps {
         dir('mi-proyecto-cypress') {
@@ -60,6 +89,9 @@ pipeline {
 
             Write-Host "--- Allure Results ---"
             Get-ChildItem -Recurse allure-results -ErrorAction SilentlyContinue
+
+            Write-Host "--- Allure Report (HTML) ---"
+            Get-ChildItem -Recurse allure-report -ErrorAction SilentlyContinue
           '''
         }
       }
@@ -74,6 +106,7 @@ pipeline {
       archiveArtifacts artifacts: 'mi-proyecto-cypress/videos_backup/**', allowEmptyArchive: true
       archiveArtifacts artifacts: 'mi-proyecto-cypress/screenshots_backup/**', allowEmptyArchive: true
       archiveArtifacts artifacts: 'mi-proyecto-cypress/allure-results/**', allowEmptyArchive: true
+      archiveArtifacts artifacts: 'mi-proyecto-cypress/allure-report/**', allowEmptyArchive: true
 
       allure includeProperties: false, jdk: '', results: [[path: 'mi-proyecto-cypress/allure-results']]
     }
