Update severity color messages in Jenkinsfile

--- a/mi-proyecto-cypress/Jenkinsfile
+++ b/mi-proyecto-cypress/Jenkinsfile
@@ -82,14 +82,14 @@ pipeline {
 
             if (Test-Path $cssPath) {
 
-              Write-Host "Modificando colores de severidad..."
+              Write-Host "Sobrescribiendo colores de severidad..."
 
               Add-Content -Path $cssPath -Value @"
-.severity-blocker { fill: #e74c3c !important; }
-.severity-critical { fill: #e67e22 !important; }
-.severity-normal { fill: #f1c40f !important; }
-.severity-minor { fill: #3498db !important; }
-.severity-trivial { fill: #95a5a6 !important; }
+.chart__fill_status_blocker { fill: #e74c3c !important; }
+.chart__fill_status_critical { fill: #e67e22 !important; }
+.chart__fill_status_normal { fill: #f1c40f !important; }
+.chart__fill_status_minor { fill: #3498db !important; }
+.chart__fill_status_trivial { fill: #95a5a6 !important; }
 "@
 
               Write-Host "=== Colores personalizados aplicados ==="
