--- a/mi-proyecto-cypress/Jenkinsfile
+++ b/mi-proyecto-cypress/Jenkinsfile
@@ -36,7 +36,14 @@ pipeline {
             powershell '''
               Write-Host "=== Ejecutando pruebas Cypress ==="
               npx cypress run --spec "$env:TEST_SPEC"
-              Write-Host "=== Pruebas finalizadas ==="
+
+              # Guardamos el código de salida de Cypress
+              $code = $LASTEXITCODE
+              Write-Host "Cypress terminó con código: $code"
+
+              # No abortar el pipeline: permitir que Jenkins procese el XML
+              # El fallo se marcará al final del pipeline
+              exit 0
             '''
           }
         }
@@ -96,21 +103,22 @@ pipeline {
       archiveArtifacts artifacts: 'mi-proyecto-cypress/allure-results/**', allowEmptyArchive: true
       archiveArtifacts artifacts: 'mi-proyecto-cypress/allure-report/**', allowEmptyArchive: true
 
-      // ============================================================
-      // 🔍 NUEVO: Diagnóstico antes del JUnit
-      // ============================================================
+      // 🔍 Diagnóstico antes del JUnit
       powershell '''
         Write-Host "=== XMLs detectados antes de JUnit ==="
         Get-ChildItem -Recurse "mi-proyecto-cypress/cypress/results/*.xml" -ErrorAction SilentlyContinue
       '''
 
-      // ============================================================
-      // 📊 BLOQUE JUNIT: Jenkins indexa los tests
-      // ============================================================
+      // 📊 Registrar resultados de tests SIEMPRE
       junit testResults: 'mi-proyecto-cypress/cypress/results/*.xml', allowEmptyResults: true, keepLongStdio: true
 
       // Allure
       allure includeProperties: false, jdk: '', results: [[path: 'mi-proyecto-cypress/allure-results']]
+
+      // ❗ Marcar el build como FAILURE si Cypress falló
+      script {
+        currentBuild.result = 'FAILURE'
+      }
     }
   }
 }
