--- a/mi-proyecto-cypress/Jenkinsfile
+++ b/mi-proyecto-cypress/Jenkinsfile
@@ -66,6 +66,9 @@ pipeline {
     }
 
     stage('Diagnóstico de artefactos') {
+      when {
+        always()
+      }
       steps {
         dir('mi-proyecto-cypress') {
           powershell '''
@@ -95,11 +98,22 @@ pipeline {
     always {
       echo '=== Archivando artefactos ==='
 
-      archiveArtifacts artifacts: 'mi-proyecto-cypress/cypress/report/**', allowEmptyArchive: true
-      archiveArtifacts artifacts: 'mi-proyecto-cypress/videos_backup/**', allowEmptyArchive: true
-      archiveArtifacts artifacts: 'mi-proyecto-cypress/screenshots_backup/**', allowEmptyArchive: true
-      archiveArtifacts artifacts: 'mi-proyecto-cypress/allure-results/**', allowEmptyArchive: true
-      archiveArtifacts artifacts: 'mi-proyecto-cypress/allure-report/**', allowEmptyArchive: true
+      // 🟦 Mover artefactos al workspace raíz para que Jenkins los muestre como enlaces
+      powershell '''
+        Write-Host "=== Moviendo artefactos al workspace raíz ==="
+
+        Copy-Item -Recurse -Force "mi-proyecto-cypress/cypress/report" "report"
+        Copy-Item -Recurse -Force "mi-proyecto-cypress/videos_backup" "videos_backup"
+        Copy-Item -Recurse -Force "mi-proyecto-cypress/screenshots_backup" "screenshots_backup"
+        Copy-Item -Recurse -Force "mi-proyecto-cypress/allure-results" "allure-results"
+        Copy-Item -Recurse -Force "mi-proyecto-cypress/allure-report" "allure-report"
+      '''
+
+      archiveArtifacts artifacts: 'report/**', allowEmptyArchive: true
+      archiveArtifacts artifacts: 'videos_backup/**', allowEmptyArchive: true
+      archiveArtifacts artifacts: 'screenshots_backup/**', allowEmptyArchive: true
+      archiveArtifacts artifacts: 'allure-results/**', allowEmptyArchive: true
+      archiveArtifacts artifacts: 'allure-report/**', allowEmptyArchive: true
 
       powershell '''
         Write-Host "=== XMLs detectados antes de JUnit ==="
@@ -111,10 +125,8 @@ pipeline {
         currentBuild.result = 'UNSTABLE'
       }
 
-      // 📊 Registrar resultados de tests
       junit testResults: 'mi-proyecto-cypress/cypress/results/*.xml', allowEmptyResults: true, keepLongStdio: true
 
-      // Allure
       allure includeProperties: false, jdk: '', results: [[path: 'mi-proyecto-cypress/allure-results']]
 
       // 🟥 Marcar como FAILURE después de registrar los resultados
