--- a/mi-proyecto-cypress/Jenkinsfile
+++ b/mi-proyecto-cypress/Jenkinsfile
@@ -40,7 +40,6 @@ pipeline {
               $code = $LASTEXITCODE
               Write-Host "Cypress terminó con código: $code"
 
-              # No abortar el pipeline aunque falle
               exit 0
             '''
           }
@@ -95,11 +94,9 @@ pipeline {
     always {
       echo '=== Archivando artefactos ==='
 
-      // ============================================================
-      // COPIAR INDEX.HTML A LA RAÍZ PARA QUE JENKINS LO DETECTE
-      // ============================================================
+      // Copiar index.html a la raíz del workspace
       powershell '''
-        Write-Host "=== Copiando index.html a la raíz del workspace para que Jenkins lo detecte ==="
+        Write-Host "=== Copiando index.html a la raíz del workspace ==="
 
         $source = "mi-proyecto-cypress/cypress/report/index.html"
         $target = "index.html"
@@ -112,14 +109,10 @@ pipeline {
         }
       '''
 
-      // ============================================================
-      // ARCHIVAR EL INDEX.HTML PRINCIPAL (APARECERÁ EN LA LISTA)
-      // ============================================================
+      // Archivar el index.html principal
       archiveArtifacts artifacts: 'index.html', allowEmptyArchive: false
 
-      // ============================================================
-      // ARCHIVAR EL RESTO DE ARTEFACTOS
-      // ============================================================
+      // Archivar el resto de artefactos
       archiveArtifacts artifacts: 'mi-proyecto-cypress/cypress/report/**', allowEmptyArchive: true
       archiveArtifacts artifacts: 'mi-proyecto-cypress/videos_backup/**', allowEmptyArchive: true
       archiveArtifacts artifacts: 'mi-proyecto-cypress/screenshots_backup/**', allowEmptyArchive: true
@@ -135,6 +128,11 @@ pipeline {
       junit testResults: 'mi-proyecto-cypress/cypress/results/*.xml', allowEmptyResults: true, keepLongStdio: true
 
       allure includeProperties: false, jdk: '', results: [[path: 'mi-proyecto-cypress/allure-results']]
+
+      // Añadir enlace directo al reporte Mochawesome en la descripción del build
+      script {
+        currentBuild.description = "<a href=\"artifact/index.html\">Ver reporte Mochawesome</a>"
+      }
     }
   }
 }
