--- a/mi-proyecto-cypress/Jenkinsfile
+++ b/mi-proyecto-cypress/Jenkinsfile
@@ -40,9 +40,31 @@ pipeline {
               $code = $LASTEXITCODE
               Write-Host "Cypress terminó con código: $code"
 
+              # No fallar el pipeline aunque Cypress falle
               exit 0
             '''
           }
+        }
+      }
+    }
+
+    stage('Generar reporte Mochawesome') {
+      steps {
+        dir('mi-proyecto-cypress') {
+          powershell '''
+            Write-Host "=== Generando reporte Mochawesome ==="
+
+            if (Test-Path "cypress/report/.jsons") {
+              Write-Host "JSONs encontrados. Generando HTML..."
+
+              npx mochawesome-merge cypress/report/.jsons/*.json > cypress/report/mochawesome.json
+              npx marge cypress/report/mochawesome.json --reportDir cypress/report
+
+              Write-Host "Reporte Mochawesome generado correctamente."
+            } else {
+              Write-Host "No hay JSONs de Mochawesome. No se generará HTML."
+            }
+          '''
         }
       }
     }
@@ -107,7 +129,6 @@ pipeline {
     always {
       echo '=== Archivando artefactos ==='
 
-      // Archivar artefactos sin duplicarlos
       archiveArtifacts artifacts: 'mi-proyecto-cypress/cypress/report/**', allowEmptyArchive: true
       archiveArtifacts artifacts: 'mi-proyecto-cypress/videos_backup/**', allowEmptyArchive: true
       archiveArtifacts artifacts: 'mi-proyecto-cypress/screenshots_backup/**', allowEmptyArchive: true
@@ -119,10 +140,8 @@ pipeline {
         Get-ChildItem -Recurse "mi-proyecto-cypress/cypress/results/*.xml" -ErrorAction SilentlyContinue
       '''
 
-      // JUnit decide el estado del build
       junit testResults: 'mi-proyecto-cypress/cypress/results/*.xml', allowEmptyResults: true, keepLongStdio: true
 
-      // Publicar Allure
       allure includeProperties: false, jdk: '', results: [[path: 'mi-proyecto-cypress/allure-results']]
     }
   }
